--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,13 @@
         android:textSize="30sp"
         android:text="Motion Diary"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:textSize="20sp"
+        android:text="로그인"/>
+
 
     <Button
         android:id="@+id/drawDiary"
@@ -28,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:backgroundTint="#B7F0B1"
-        android:text="일기 공유하기"/>
+        android:text="갤러리"/>
 
 
 
