--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,8 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.PictureDiary" parent="Theme.MaterialComponents.NoActionBar">
+<!--
+https://stackoverflow.com/questions/62967427/android-bottom-navigation-bar-color-changes-to-black-after-adding-com-google-and
+-->
 
+<resources xmlns:tools="http://schemas.android.com/tools">
+    <style name="Theme.PictureDiary" parent="Theme.MaterialComponents.Light.NoActionBar">
     </style>
 </resources>
