--- a/app/src/main/res/layout/community.xml
+++ b/app/src/main/res/layout/community.xml
@@ -15,14 +15,44 @@
             android:textAlignment="center"
             android:textSize="25sp"
             android:text="Motion Diary"/>
+
     </androidx.appcompat.widget.Toolbar>
+
+
 
     <LinearLayout
         android:id="@+id/bar_divider"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_below="@id/toolbar"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar"
+        android:orientation="horizontal">
+
+        <android.widget.Button
+            android:id="@+id/add_grp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="추가할 그룹"
+            android:textColor="#777"
+            android:textSize="22sp" />
+
+        <android.widget.Button
+            android:id="@+id/select_grp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="저장할 그룹"
+            android:textColor="#777"
+            android:textSize="22sp" />
+
+    </LinearLayout>
+
+
+
 
     <FrameLayout
         android:id="@+id/main_content"
