--- a/app/src/main/res/layout/community.xml
+++ b/app/src/main/res/layout/community.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -18,48 +19,22 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-
-
     <LinearLayout
         android:id="@+id/bar_divider"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="1dp"
         android:layout_below="@id/toolbar"
         android:orientation="horizontal">
-
-        <android.widget.Button
-            android:id="@+id/add_grp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:gravity="center"
-            android:maxLines="1"
-            android:text="추가할 그룹"
-            android:textColor="#777"
-            android:textSize="22sp" />
-
-        <android.widget.Button
-            android:id="@+id/select_grp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:gravity="center"
-            android:maxLines="1"
-            android:text="저장할 그룹"
-            android:textColor="#777"
-            android:textSize="22sp" />
-
     </LinearLayout>
-
-
-
 
     <FrameLayout
         android:id="@+id/main_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/bar_divider"
-        android:layout_above="@id/nav_divider"/>
+        android:layout_above="@id/nav_divider">
+    </FrameLayout>
+
 
     <LinearLayout
         android:id="@+id/nav_divider"
