--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
         android:gravity="bottom"
         android:orientation="vertical">
 
-        <!-- EditText - Email -->
+        <!-- EditText - User ID -->
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,11 +42,10 @@
             android:layout_marginStart="20dp">
 
             <EditText
-                android:id="@+id/email_edittext"
+                android:id="@+id/username_edittext"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="이메일"
-                android:inputType="textEmailAddress" />
+                android:hint="아이디" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- EditText - Password -->
@@ -66,52 +65,16 @@
 
         <!-- Button -->
         <android.widget.Button
-            android:id="@+id/email_login_button"
+            android:id="@+id/signup_login_button"
             android:backgroundTint="@color/black"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="15dp"
-            android:textColor="@color/white"
-            android:text="회원가입 및 이메일 로그인" />
-
-        <android.widget.Button
-            android:id="@+id/google_sign_in_button"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
             android:layout_marginBottom="100dp"
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
-            android:background="@drawable/btn_signin_google"
-            android:text="GOOLGE로 로그인"
-            android:textColor="@color/white" />
-
-
-<!--        <android.widget.Button-->
-<!--            android:id="@+id/facebook_login_button"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="40dp"-->
-<!--            android:layout_gravity="center_horizontal"-->
-<!--            android:layout_marginBottom="5dp"-->
-<!--            android:layout_marginEnd="20dp"-->
-<!--            android:layout_marginStart="20dp"-->
-<!--            android:background="@drawable/btn_signin_facebook"-->
-<!--            android:text="FACEBOOK으로 로그인"-->
-<!--            android:textColor="@color/white" />-->
-
-<!--        <android.widget.Button-->
-<!--            android:id="@+id/twitter_login_button"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="40dp"-->
-<!--            android:layout_marginBottom="35dp"-->
-<!--            android:layout_marginEnd="20dp"-->
-<!--            android:layout_marginStart="20dp"-->
-<!--            android:background="@drawable/btn_signin_twitter"-->
-<!--            android:text="TWITTER로 로그인"-->
-<!--            android:textColor="@color/white" />-->
-
+            android:layout_marginTop="30dp"
+            android:textColor="@color/white"
+            android:text="회원가입 및 로그인" />
 
     </LinearLayout>
 
