그룹 삭제 (미완)

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -14,7 +14,7 @@
             android:id="@+id/detailRecycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/user_groups"/>
+            tools:listitem="@layout/user_group_item"/>
 
         <android.widget.Button
             android:id="@+id/add_grp"
