--- a/app/src/main/res/layout/community.xml
+++ b/app/src/main/res/layout/community.xml
@@ -8,14 +8,14 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="35dp">
+        android:layout_height="wrap_content">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:text="Motion Diary"
             android:textAlignment="center"
-            android:textSize="25sp"
-            android:text="Motion Diary"/>
+            android:textSize="25sp" />
 
     </androidx.appcompat.widget.Toolbar>
 
