--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -1,31 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#AA22"
     android:orientation="vertical">
 
-    <LinearLayout
+    <!--프로필 사진-->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/info_user_img"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="30dp"
+        app:cardCornerRadius="100dp"
+        app:cardElevation="0dp"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.3">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/user"/>
+    </androidx.cardview.widget.CardView>
+
+    <!--사용자 아이디-->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/info_area_username"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/info_user_img">
+
+        <TextView
+            android:id="@+id/info_username_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="사용자 아이디"
+            android:textSize="20sp"
+            android:visibility="visible"
+            tools:ignore="MissingConstraints" />
+
+        <EditText
+            android:id="@+id/info_username_edit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:hint="사용자 아이디"
+            android:textSize="20sp"
+            android:visibility="gone"
+            tools:ignore="MissingConstraints" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!--상태 메시지-->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/speech_bubble"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="20dp"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        app:contentPadding="10dp"
+        app:cardBackgroundColor="#B2EBF4"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="0dp"
+        app:layout_constraintDimensionRatio="3:1"
+        app:layout_constraintTop_toBottomOf="@id/info_area_username"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/info_message_text"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="사용자 정보"
-            android:textSize="20sp"/>
+            android:layout_marginStart="5dp"
+            android:layout_gravity="center"
+            android:textSize="15sp"
+            android:visibility="visible"/>
 
-        <TextView
-            android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/info_message_edit"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="5dp"
-            android:text="사용자 정보"
-            android:textSize="20sp"/>
+            android:layout_marginStart="5dp"
+            android:layout_gravity="center"
+            android:textSize="15sp"
+            android:visibility="gone"/>
 
+    </androidx.cardview.widget.CardView>
+
+    <android.widget.Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="정보 수정"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/info_user_out"/>
+
+    <LinearLayout
+        android:id="@+id/info_user_out"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <android.widget.Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="계정 삭제"/>
+
+        <android.widget.Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="로그아웃"/>
 
     </LinearLayout>
 
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
