--- a/app/src/main/res/layout/group_timeline.xml
+++ b/app/src/main/res/layout/group_timeline.xml
@@ -18,54 +18,14 @@
             android:text="Motion Diary"/>
     </androidx.appcompat.widget.Toolbar>
 
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/profile_image"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_margin="7.5dp"/>
+        android:layout_height="match_parent"
+        android:id="@+id/recyclerViewtimeline">
 
-        <TextView
-            android:id="@+id/profile_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="User Name"/>
-    </LinearLayout>
+    </androidx.recyclerview.widget.RecyclerView>
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
-        android:scaleType="fitXY"/>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginLeft="8dp">
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/favorite_imageview"/>
-        <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:id="@+id/comment_imageview"/>
-    </LinearLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:text="좋아요 0개"/>
-    <TextView
-        android:id="@+id/explain_textview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="35dp"
-        android:layout_marginLeft="8dp"
-        android:text="사진 내용"/>
 
 
 </LinearLayout>
