--- a/app/src/main/res/layout/timeline_detail.xml
+++ b/app/src/main/res/layout/timeline_detail.xml
@@ -19,6 +19,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/Diary_image"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:scaleType="fitXY"/>
