--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -9,49 +9,70 @@
 
     <!--프로필 사진-->
     <androidx.cardview.widget.CardView
-        android:id="@+id/info_user_img"
+        android:id="@+id/info_profilepic_area"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_margin="30dp"
-        app:cardCornerRadius="100dp"
+        android:layout_margin="50dp"
+        app:cardCornerRadius="200dp"
         app:cardElevation="0dp"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintWidth_percent="0.3">
+        app:layout_constraintHeight_percent="0.15">
+        <ImageView
+            android:id="@+id/info_profile_pic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/change_pic"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:cardCornerRadius="200dp"
+        android:visibility="gone"
+        app:cardElevation="0dp"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintRight_toRightOf="@id/info_profilepic_area"
+        app:layout_constraintBottom_toBottomOf="@id/info_profilepic_area"
+        app:layout_constraintHeight_percent="0.05">
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/user"/>
+            android:background="@drawable/camera"/>
     </androidx.cardview.widget.CardView>
 
     <!--사용자 아이디-->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/info_area_username"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginVertical="20dp"
+        android:layout_marginHorizontal="120dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/info_user_img">
+        app:layout_constraintTop_toBottomOf="@id/info_profilepic_area">
 
         <TextView
             android:id="@+id/info_username_text"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
             android:text="사용자 아이디"
-            android:textSize="20sp"
+            android:textSize="25sp"
+            android:textStyle="bold"
             android:visibility="visible"
             tools:ignore="MissingConstraints" />
 
         <EditText
             android:id="@+id/info_username_edit"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:hint="사용자 아이디"
+            android:layout_marginVertical="20dp"
+            android:layout_marginHorizontal="100dp"
             android:textSize="20sp"
+            android:gravity="center_horizontal"
             android:visibility="gone"
             tools:ignore="MissingConstraints" />
 
@@ -60,32 +81,36 @@
     <!--상태 메시지-->
     <androidx.cardview.widget.CardView
         android:id="@+id/speech_bubble"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="30dp"
         app:contentPadding="10dp"
         app:cardBackgroundColor="#B2EBF4"
         app:cardCornerRadius="10dp"
         app:cardElevation="0dp"
-        app:layout_constraintDimensionRatio="3:1"
+        app:layout_constraintDimensionRatio="6:1"
         app:layout_constraintTop_toBottomOf="@id/info_area_username"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintWidth_percent="0.7">
 
         <TextView
             android:id="@+id/info_message_text"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:gravity="center_horizontal"
             android:layout_gravity="center"
             android:textSize="15sp"
             android:visibility="visible"/>
 
         <EditText
             android:id="@+id/info_message_edit"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
+            android:layout_marginHorizontal="50dp"
+            android:gravity="center_horizontal"
             android:layout_gravity="center"
             android:textSize="15sp"
             android:visibility="gone"/>
@@ -93,10 +118,24 @@
     </androidx.cardview.widget.CardView>
 
     <android.widget.Button
+        android:id="@+id/info_update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginHorizontal="30dp"
+        android:visibility="visible"
         android:text="정보 수정"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/info_user_out"/>
+
+    <android.widget.Button
+        android:id="@+id/info_update_complete"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginBottom="30dp"
+        android:visibility="gone"
+        android:text="수정 완료"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toTopOf="@id/info_user_out"/>
@@ -106,9 +145,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingHorizontal="20dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <android.widget.Button
             android:layout_width="wrap_content"
