--- a/app/src/main/res/layout/timeline_detail.xml
+++ b/app/src/main/res/layout/timeline_detail.xml
@@ -11,18 +11,24 @@
         android:layout_height="50dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"/>
         <TextView
             android:id="@+id/profile_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="User Name"/>
+            android:text="User Name"
+            android:layout_marginLeft="20dp"
+            android:textSize="20dp"/>
     </LinearLayout>
 
     <ImageView
         android:id="@+id/Diary_image"
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"
+        android:layout_marginHorizontal="20dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
