--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -22,24 +22,24 @@
         app:layout_constraintHeight_percent="0.15">
         <ImageView
             android:id="@+id/info_profile_pic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/change_pic"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:cardCornerRadius="200dp"
         android:visibility="gone"
         app:cardElevation="0dp"
+        app:cardCornerRadius="200dp"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintRight_toRightOf="@id/info_profilepic_area"
         app:layout_constraintBottom_toBottomOf="@id/info_profilepic_area"
         app:layout_constraintHeight_percent="0.05">
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:background="@drawable/camera"/>
     </androidx.cardview.widget.CardView>
 
@@ -92,7 +92,8 @@
         app:layout_constraintTop_toBottomOf="@id/info_area_username"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintWidth_percent="0.7">
+        app:layout_constraintWidth_percent="0.6"
+        app:layout_constraintHeight_percent="0.2">
 
         <TextView
             android:id="@+id/info_message_text"
@@ -101,7 +102,7 @@
             android:layout_marginStart="5dp"
             android:gravity="center_horizontal"
             android:layout_gravity="center"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:visibility="visible"/>
 
         <EditText
