--- a/app/src/main/res/layout/drawing_main.xml
+++ b/app/src/main/res/layout/drawing_main.xml
@@ -4,52 +4,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#BDBDBD"
     tools:context=".DrawingActivity">
-    <FrameLayout
-        android:id="@+id/fl_drawing_view_container"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_margin="5dp"
-        android:background="@drawable/backgroud_drawing_view_layout"
-        android:padding="1dp"
-        app:layout_constraintBottom_toTopOf="@+id/ll_paint_colors"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
 
-    <android.widget.Button
-        android:id="@+id/select_grp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:gravity="center"
-        android:maxLines="1"
-        android:text="공유"
-        android:textColor="#777"
-        android:textSize="22sp" />
+    <!-- 그림판 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fl_drawing_view_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="@drawable/backgroud_drawing_view_layout"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+<!--        <android.widget.Button-->
+<!--            android:id="@+id/select_grp"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginEnd="8dp"-->
+<!--            android:gravity="center"-->
+<!--            android:maxLines="1"-->
+<!--            android:text="공유"-->
+<!--            android:textColor="#777"-->
+<!--            android:textSize="22sp" />-->
 
         <ImageView
             android:id="@+id/iv_background"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="image"
-            android:scaleType="centerCrop" />
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
         <com.example.picturediary.DrawingView
             android:id="@+id/drawing_view"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#80FFFFFF"/>
-    </FrameLayout>
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="#80FFFFFF"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <!-- 팔레트 -->
     <LinearLayout
         android:id="@+id/ll_paint_colors"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@id/ll_action_buttons"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/fl_drawing_view_container">
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fl_drawing_view_container"
+        app:layout_constraintBottom_toTopOf="@id/other_buttons">
 
         <ImageButton
             android:layout_width="25dp"
@@ -131,84 +148,75 @@
             android:tag="@color/random" />
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/ll_action_buttons"
+    <!-- 그 외 버튼 -->
+    <TableLayout
+        android:id="@+id/other_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
+        android:stretchColumns="1"
+        android:layout_marginHorizontal="15dp"
+        app:layout_constraintTop_toBottomOf="@id/ll_paint_colors"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
-        <Button
-            android:id="@+id/ib_motion"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
-            android:text="완료"
-            android:contentDescription="image"
-            android:scaleType="fitXY"
-             />
-        <Button
-            android:id="@+id/ib_gallery"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
-            android:contentDescription="image"
-            android:scaleType="fitXY"
-            android:text="갤러리"
-            android:src="@drawable/imsi" />
-        <ImageButton
-            android:id="@+id/ib_undo"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:contentDescription="image"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_undo"
-            android:visibility="visible" />
-        <ImageButton
-            android:id="@+id/ib_redo"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:contentDescription="image"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_redo"
-            android:visibility="visible" />
-        <Button
-            android:id="@+id/ib_brush"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
-            android:contentDescription="image"
-            android:scaleType="fitXY"
-            android:tooltipText="브러쉬"
-            android:text="펜"
-            android:src="@drawable/imsi" />
-        <ImageButton
-            android:id="@+id/ib_eraser"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
-            android:contentDescription="image"
-            android:scaleType="fitXY"
-            android:tooltipText="지우개"
-            android:text="지우개"
-            android:tag="@color/white"
-            android:src="@drawable/imsi" />
-        <Button
-            android:id="@+id/ib_save"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:contentDescription="image"
-            android:scaleType="fitXY"
-            android:text="저장"
-            android:src="@drawable/imsi" />
-        <ImageButton
-            android:id="@+id/ib_reset"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:contentDescription="image"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_reset" />
-    </LinearLayout>
+
+        <TableRow>
+            <android.widget.Button
+                android:id="@+id/ib_brush"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:tooltipText="브러쉬"
+                android:textSize="12sp"
+                android:text="펜"/>
+            <android.widget.Button
+                android:id="@+id/ib_eraser"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textSize="11dp"
+                android:text="지우개"/>
+            <ImageButton
+                android:id="@+id/ib_reset"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/ic_reset" />
+<!--            <android.widget.Button-->
+<!--                android:id="@+id/ib_gallery"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_weight="1"-->
+<!--                android:textSize="8sp"-->
+<!--                android:text="갤러리"/>-->
+            <ImageButton
+                android:id="@+id/ib_undo"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/ic_undo"
+                android:visibility="visible" />
+            <ImageButton
+                android:id="@+id/ib_redo"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:src="@drawable/ic_redo"
+                android:visibility="visible" />
+            <android.widget.Button
+                android:id="@+id/ib_save"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textSize="12sp"
+                android:text="저장"/>
+            <android.widget.Button
+                android:id="@+id/ib_motion"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:textSize="12sp"
+                android:text="완료"/>
+        </TableRow>
+    </TableLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
