사용자 정보 수정

--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -22,6 +22,7 @@
         app:layout_constraintHeight_percent="0.15">
         <ImageView
             android:id="@+id/info_profile_pic"
+            android:clickable="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </androidx.cardview.widget.CardView>
