--- a/app/src/main/res/layout/activity_crop.xml
+++ b/app/src/main/res/layout/activity_crop.xml
@@ -23,22 +23,26 @@
 
     <android.widget.Button
         android:id="@+id/completeBtn"
-        android:layout_width="100dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/playAll"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/objectRecycler"
+        app:layout_constraintHeight_percent="0.08"
+        app:layout_constraintWidth_percent="0.2"
         android:text="완료"/>
 
     <android.widget.Button
         android:id="@+id/playAll"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="30dp"
         app:layout_constraintTop_toBottomOf="@id/completeBtn"
         app:layout_constraintBottom_toTopOf="@id/constraintLayout"
         app:layout_constraintLeft_toRightOf="@id/objectRecycler"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHeight_percent="0.08"
         android:text="모두 재생"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
