--- a/app/src/main/res/layout/item_chosen_object.xml
+++ b/app/src/main/res/layout/item_chosen_object.xml
@@ -30,6 +30,13 @@
 
     <ImageView
         android:id="@+id/objectView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/objectViewOnly"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/white"
@@ -48,8 +55,8 @@
         android:background="@android:color/transparent"
         android:src="@drawable/delete_object"
         app:layout_constraintDimensionRatio="1:1"
-        app:layout_constraintTop_toTopOf="@id/objectView"
-        app:layout_constraintRight_toRightOf="@id/objectView"
+        app:layout_constraintTop_toTopOf="@id/objectViewOnly"
+        app:layout_constraintRight_toRightOf="@id/objectViewOnly"
         app:layout_constraintHeight_percent="0.15"/>
 
     <android.widget.Button
@@ -58,7 +65,7 @@
         android:layout_height="wrap_content"
         android:text="재생"
         app:flow_verticalAlign="center"
-        app:layout_constraintTop_toBottomOf="@id/objectView"
+        app:layout_constraintTop_toBottomOf="@id/objectViewOnly"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
