--- a/app/src/main/res/layout/item_timeline.xml
+++ b/app/src/main/res/layout/item_timeline.xml
@@ -52,11 +52,12 @@
             android:id="@+id/favorite_imageview"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginStart="10dp"
             android:src="@drawable/ic_favorite_border"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintWidth_percent="0.1"/>
+            app:layout_constraintWidth_percent="0.05"/>
 
         <TextView
             android:id="@+id/like_number"
