--- a/app/src/main/res/layout/item_chosen_object.xml
+++ b/app/src/main/res/layout/item_chosen_object.xml
@@ -22,7 +22,28 @@
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/objectMotion"
+        android:id="@+id/startX"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/startY"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/width"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/height"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
@@ -30,6 +51,13 @@
 
     <ImageView
         android:id="@+id/objectView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:ignore="MissingConstraints" />
+
+    <TextView
+        android:id="@+id/objectMotion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
